Sun Mar 16 14:33:41 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_lib_objects): Set seen_c_source to line
	number.
	(handle_yacc_lex_cxx): Use seen_c_source as line number.
	(am_line_error): Line of -1 means skip line-number check.

	* automake.in (read_am_file): Change to keep perl -w quiet.
	(check_typos): Removed extra check of EXTRA_ containing config
	subs.

Mon Mar 10 23:17:19 1997  Tom Tromey  <tromey@cygnus.com>

	* remake-hdr.am (stamp-h): Set CONFIG_HEADERS to
	$(CONFIG_HEADER_FULL).
	* automake.in (handle_configure): Define CONFIG_HEADER_FULL.

	* automake.in (handle_lib_objects): Set seen_c_source as
	appropriate.  From Alexander V. Lukyanov.  Test cxxlibobj.test.

Sat Mar  8 22:54:35 1997  Tom Tromey  <tromey@cygnus.com>

	* texinfo.tex: New version.

	* automake.in (handle_emacs_lisp): If EMACS is `no', then we
	couldn't find an Emacs.  So don't bother running elisp-comp.  From
	Ulrich Drepper.

	* automake.in (handle_texinfo): Added .tr and .cv to list of
	texinfo clean extensions.  From Karl Berry.

Fri Feb 28 22:14:53 1997  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am: Make sure we never use "undef".

	* automake.in (usage): Changed bug-reporting address.
	(handle_dist): Use undef, not delete.

Wed Feb 26 00:20:39 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_tags): In default case, add @tags_deps to
	dependencies of tags target.

Tue Feb 25 23:46:29 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_tests): If a test failed, then make should
	fail.  From Jim Meyering.

Mon Feb 24 19:02:21 1997  Tom Tromey  <tromey@cygnus.com>

	* texi-vers.am (@VTEXI@): Copy stamp file into output.

Sun Feb 23 00:10:36 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_programs): Give correct error line for lex
	error.
	(am_line_error): Avoid uninitialized value errors from perl -w.

	* aclocal.in (scan_m4_files): Fixed perl -w warning.

	* texinfos.am (.texi, .texinfo): New targets.
