@@ -16,6 +16,9 @@ non-C source in a libtool library specification.
   - if the target is mandated (eg, "info"), tell the user
     consider auto-modifying the program name to work around this
 
+* if it isn't possible do use .SUFFIXES as a target, then give error
+  if it appears in Makefile.am
+
 ================================================================
 
 should clean up texinfos.am; one rule is repeated 3 times, but
