@@ -159,11 +159,9 @@ sub parse_arguments
 	elsif ($arglist[0] eq '--version')
 	{
 	    print "aclocal (GNU $PACKAGE) $VERSION\n";
-	    print "Copyright (C) 1996 Free Software Foundation, Inc.\n";
-	    print "aclocal comes with ABSOLUTELY NO WARRANTY.\n";
-	    print "You may redistribute copies of aclocal\n";
-	    print "under the terms of the GNU General Public License.\n";
-	    print "For more information about these matters, see the file named COPYING.\n";
+	    print "Copyright (C) 1996, 1997 Free Software Foundation, Inc.\n";
+	    print "This is free software; see the source for copying conditions.  There is NO\n";
+	    print "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n";
 	    exit 0;
 	}
 	elsif ($arglist[0] eq '--help')
