@@ -269,11 +269,10 @@ sub parse_arguments
 	if ($arglist[0] eq "--version")
 	{
 	    print "automake (GNU $PACKAGE) $VERSION\n";
-	    print "Copyright (C) 1994, 1995, 1996 Free Software Foundation, Inc.\n";
-	    print "automake comes with ABSOLUTELY NO WARRANTY.\n";
-	    print "You may redistribute copies of automake\n";
-	    print "under the terms of the GNU General Public License.\n";
-	    print "For more information about these matters, see the file named COPYING.\n";
+	    print "Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.\n";
+	    print "This is free software; see the source for copying conditions.  There is NO\n";
+	    print "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n";
+
 	    exit 0;
 	}
 	elsif ($arglist[0] eq "--help")
@@ -2759,6 +2758,11 @@ sub handle_footer
 	# line.
 	push (@suffixes, &variable_value_as_list ('SUFFIXES'));
     }
+    if (&target_defined ('.SUFFIXES'))
+    {
+	&am_line_error ('.SUFFIXES',
+			"use variable \`SUFFIXES', not target \`.SUFFIXES'");
+    }
 
     # Note: AIX 4.1 /bin/make will fail if any suffix rule appears
     # before .SUFFIXES.  So we make sure that .SUFFIXES appears before
@@ -3751,6 +3755,13 @@ sub pretty_print_rule
 
 
 ################################################################
+
+# See if a target exists.
+sub target_defined
+{
+    local ($target) = @_;
+    return defined $targets{$target};
+}
 
 # See if a variable exists.
 sub variable_defined
