@@ -218,7 +218,7 @@ information.
 
 @item --gnu
 Set the global strictness to @samp{gnu}.  @xref{Gnits} for more
-information.
+information.  This is the default strictness.
 
 @item --help
 Print a summary of the command line options and exit.
@@ -1183,11 +1183,13 @@ The command used to actually link a C++ program.
 @node ANSI
 @section Automatic de-ANSI-fication
 
-Although the GNU standards prohibit it, some GNU programs are written in
-ANSI C.  This is possible because each source file can be
-``de-ANSI-fied'' before the actual compilation takes place.
-@c NOTE that the standards no longer prohibit this!
-@c What does that imply for this feature?
+Although the GNU standards allow the use of ANSI C, this can have the
+effect of limiting portability of a package to some older compilers
+(notably SunOS).
+
+Automake allows you to work around this problem on such machines by
+``de-ANSI-fying'' each source file before the actual compilation takes
+place.
 
 If the @file{Makefile.am} variable @code{AUTOMAKE_OPTIONS}
 @vindex AUTOMAKE_OPTIONS
@@ -1230,7 +1232,6 @@ current directory.
 Note that the directory holding the @code{ansi2knr} support files must
 be built before all other directories using these files.  Automake does
 not currently check that this is the case.
-
 
 @node Dependencies
 @section Automatic dependency tracking
