@@ -1,3 +1,3 @@
-@set UPDATED 28 February 1997
+@set UPDATED 18 March 1997
 @set EDITION 1.1m
 @set VERSION 1.1m
