@@ -1,3 +1,8 @@
+Tue Mar 18 17:20:03 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (target_defined): New sub.
+	(handle_footer): Error if target .SUFFIXES used.
+
 Sun Mar 16 14:33:41 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_lib_objects): Set seen_c_source to line
